added simulate page

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,6 +20,7 @@ html#ng-app(ng-app='App', xmlns:ng="http://angularjs.org")
     //- angular controllers
     script(src='/coffee/app.js')
     script(src='/coffee/program.js')
+    script(src='/coffee/simulate.js')
 
     //- misc settings
     meta(charset="utf-8")
