added home page

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,2 +1,40 @@
 
-<h1>My Project</h1>
+<head>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
+  <div class="container">
+    <div class="header">
+      <nav>
+        <ul class="nav nav-tabs nav-justified">
+          <li role="main"> 
+            <h3 class="text-muted">Battle Bots</h3>
+          </li>
+          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="#about">About</a></li>
+          <li role="presentation"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <body>
+    <div class="jumbotron centered">
+      <h1>Battle Bots</h1>
+      <p class="lead">Learn programming the fun way!</p>
+    </div>
+  </body>
+  <p>
+    <div class="centered"><a href="#program" role="button" class="btn btn-lg big-btn btn-success"> 
+        <div class="font">Play Now!</div></a></div>
+  </p>
+</head>
+<!-- second section - About-->
+<div id="about" class="pad-section">
+  <h1>About Us
+    <p>This is a prototype for a webapp game that teaches kids the basics of programming through controlling a robot. This is for CMSC434 Human Computer Interaction course in the University of Maryland, College Park.</p>
+  </h1>
+</div>
+<div id="contact" class="pad-section">
+  <h1>Contact Us
+    <p>Please fill free to leave us an email </p>
+  </h1>
+</div>
