--- a/public/stylus/style.styl
+++ b/public/stylus/style.styl
@@ -3,3 +3,19 @@ body
     height 100%
     padding 0
     margin 0
+
+.centered
+  text-align center
+.big-btn
+  tex-align center
+  height 100px
+  width 500px
+.jumbotron
+  background url('http://www.clker.com/cliparts/7/5/e/9/1331806738305313089sad%20robot-md.png') no-repeat right center
+  height 310px
+.font
+  font-size xx-large  
+  display flex
+  align-items center
+  justify-content center
+  height 100%
