--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,1 +1,34 @@
-h1 My Project
+head
+  script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js')
+  
+  link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+  .container
+    .header
+      nav
+        ul.nav.nav-tabs.nav-justified
+          li(role='main') 
+            h3.text-muted Battle Bots
+          li.active(role='presentation')
+            a(href='#') Home
+          li(role='presentation')
+            a(href='#about') About
+          li(role='presentation')
+            a(href='#contact') Contact
+  body
+   .jumbotron.centered
+    h1 Battle Bots
+    p.lead
+      | Learn programming the fun way!
+  p
+    div.centered
+      a.btn.btn-lg.big-btn.btn-success(href='#program', role='button') 
+        div.font Play Now!
+
+// second section - About
+div#about.pad-section
+  h1 About Us
+    p This is a prototype for a webapp game that teaches kids the basics of programming through controlling a robot. This is for CMSC434 Human Computer Interaction course in the University of Maryland, College Park.
+div#contact.pad-section
+  h1 Contact Us
+    p Please fill free to leave us an email 
+  
