--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -2,6 +2,7 @@
 <head>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
+  <title>Battle Bots</title>
   <div class="container">
     <div class="header">
       <nav>
@@ -28,13 +29,13 @@
   </p>
 </head>
 <!-- second section - About-->
-<div id="about" class="pad-section">
+<section id="about" class="pad-section">
   <h1>About Us
     <p>This is a prototype for a webapp game that teaches kids the basics of programming through controlling a robot. This is for CMSC434 Human Computer Interaction course in the University of Maryland, College Park.</p>
   </h1>
-</div>
-<div id="contact" class="pad-section">
+</section>
+<section id="contact" class="pad-section">
   <h1>Contact Us
     <p>Please fill free to leave us an email </p>
   </h1>
-</div>
+</section>
