--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ html#ng-app(ng-app='App', xmlns:ng="http://angularjs.org")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=0")
 
-    title PHP Metrics
+    title Battle Bots
 
   body(ng-controller="BodyCtrl")
     .container-fluid
