--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -2,6 +2,7 @@ head
   script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js')
   
   link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+  title Battle Bots
   .container
     .header
       nav
@@ -25,10 +26,10 @@ head
         div.font Play Now!
 
 // second section - About
-div#about.pad-section
+section#about.pad-section
   h1 About Us
     p This is a prototype for a webapp game that teaches kids the basics of programming through controlling a robot. This is for CMSC434 Human Computer Interaction course in the University of Maryland, College Park.
-div#contact.pad-section
+section#contact.pad-section
   h1 Contact Us
     p Please fill free to leave us an email 
   
